Closed Bug 1417356 Opened 8 years ago Closed 8 years ago

stylo: Some web extension xpcshell tests on Android are failure with stylo

Categories

(Core Graveyard :: Widget: Android, defect)

defect
Not set
normal

Tracking

(firefox57 wontfix, firefox58 wontfix, firefox59 fixed)

RESOLVED FIXED
mozilla59
Tracking Status
firefox57 --- wontfix
firefox58 --- wontfix
firefox59 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

maybe, this is a regression by bug 1403690
Assignee: nobody → m_kato
Blocks: 1403690
Comment on attachment 8928805 [details] Bug 1417356 - xpcshell doesn't have Java thread. https://reviewboard.mozilla.org/r/200080/#review205526 ::: widget/android/nsLookAndFeel.cpp:518 (Diff revision 1) > - mShowPassword = java::GeckoAppShell::GetShowPasswordSetting(); > + mShowPassword = jni::IsAvailable() ? > + java::GeckoAppShell::GetShowPasswordSetting() : > + false; // xpcshell case How about this? mShowPassword = jni::IsAvailable() && java::GeckoAppShell::GetShowPasswordSetting();
Attachment #8928805 - Flags: review?(nchen) → review+
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: